tests/baselines/reference/crashInsourcePropertyIsRelatableToTargetProperty.errors.txt
crashInsourcePropertyIsRelatableToTargetProperty.ts(5,1): error TS2154: Specialized overload signature is not assignable to any non-specialized signature.
crashInsourcePropertyIsRelatableToTargetProperty.ts(9,5): error TS2012: Cannot convert 'typeof foo' to 'D':
	Type 'typeof foo' is missing property 'x' from type 'D'.
